# CalendarHelp

./: .gitignore  DESIGN.md  README.md  authorize.py  pyproject.toml  requirements.txt  run_daily.py  run_weekly.py
.github/workflows/: daily.yml  weekly.yml
gardener/: classifier.py  config.py  digest.py  gmail_client.py  rules.yaml  runner.py  store.py
tests/: test_classifier.py  test_digest.py  test_gmail_client.py  test_runner.py  test_store.py
