[project]
name = "inbox-gardener"
version = "0.1.0"
description = "Daily agent that keeps a Gmail inbox clean (RETAIL/KEEP/REVIEW)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
